seaqt/QtMultimedia/gen_qcameraviewfindersettingscontrol.h

class QCameraViewfinderSettingsControl;
class QCameraViewfinderSettingsControl2;
class QMetaMethod;
class QMetaObject;
class QObject;
class QVariant;
typedef struct QCameraViewfinderSettings QCameraViewfinderSettings;
typedef struct QCameraViewfinderSettingsControl QCameraViewfinderSettingsControl;
typedef struct QCameraViewfinderSettingsControl2 QCameraViewfinderSettingsControl2;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QVariant QVariant;
QMetaObject* QCameraViewfinderSettingsControl_metaObject(const QCameraViewfinderSettingsControl* self);
void* QCameraViewfinderSettingsControl_metacast(QCameraViewfinderSettingsControl* self, const char* param1);
int QCameraViewfinderSettingsControl_metacall(QCameraViewfinderSettingsControl* self, int param1, int param2, void** param3);
struct miqt_string QCameraViewfinderSettingsControl_tr(const char* s);
struct miqt_string QCameraViewfinderSettingsControl_trUtf8(const char* s);
bool QCameraViewfinderSettingsControl_isViewfinderParameterSupported(const QCameraViewfinderSettingsControl* self, int parameter);
QVariant* QCameraViewfinderSettingsControl_viewfinderParameter(const QCameraViewfinderSettingsControl* self, int parameter);
void QCameraViewfinderSettingsControl_setViewfinderParameter(QCameraViewfinderSettingsControl* self, int parameter, QVariant* value);
struct miqt_string QCameraViewfinderSettingsControl_tr2(const char* s, const char* c);
struct miqt_string QCameraViewfinderSettingsControl_tr3(const char* s, const char* c, int n);
struct miqt_string QCameraViewfinderSettingsControl_trUtf82(const char* s, const char* c);
struct miqt_string QCameraViewfinderSettingsControl_trUtf83(const char* s, const char* c, int n);
const QMetaObject* QCameraViewfinderSettingsControl_staticMetaObject();
QMetaObject* QCameraViewfinderSettingsControl2_metaObject(const QCameraViewfinderSettingsControl2* self);
void* QCameraViewfinderSettingsControl2_metacast(QCameraViewfinderSettingsControl2* self, const char* param1);
int QCameraViewfinderSettingsControl2_metacall(QCameraViewfinderSettingsControl2* self, int param1, int param2, void** param3);
struct miqt_string QCameraViewfinderSettingsControl2_tr(const char* s);
struct miqt_string QCameraViewfinderSettingsControl2_trUtf8(const char* s);
struct miqt_array /* of QCameraViewfinderSettings* */  QCameraViewfinderSettingsControl2_supportedViewfinderSettings(const QCameraViewfinderSettingsControl2* self);
QCameraViewfinderSettings* QCameraViewfinderSettingsControl2_viewfinderSettings(const QCameraViewfinderSettingsControl2* self);
void QCameraViewfinderSettingsControl2_setViewfinderSettings(QCameraViewfinderSettingsControl2* self, QCameraViewfinderSettings* settings);
struct miqt_string QCameraViewfinderSettingsControl2_tr2(const char* s, const char* c);
struct miqt_string QCameraViewfinderSettingsControl2_tr3(const char* s, const char* c, int n);
struct miqt_string QCameraViewfinderSettingsControl2_trUtf82(const char* s, const char* c);
struct miqt_string QCameraViewfinderSettingsControl2_trUtf83(const char* s, const char* c, int n);
const QMetaObject* QCameraViewfinderSettingsControl2_staticMetaObject();